--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <div class="container">
       <div class="post__inner">
         <div class="post__left">
-          <div class="post__item">
-            <img src="" alt="picture">
+          <a href="#" class="post__item">
+            <img src="images/post-img1.png" alt="picture">
             <div class="post__info">
-              <p class="post__rubric">vehicle</p>
+              <p class="post__rubric">Tourism</p>
               <h1 class="post__title">
                 One of Saturn’s largest rings may be newer than anyone
               </h1>
@@ -90,7 +90,77 @@
                 <span class="author">Rickie Baroch</span>
               </p>
             </div>
-          </div>
+          </a>
+          <a href="#" class="post__item">
+            <img src="images/post-img2.png" alt="picture">
+            <div class="post__info">
+              <p class="post__rubric">Sport</p>
+              <h1 class="post__title">
+                One of Saturn’s largest rings may be newer than anyone
+              </h1>
+              <p class="post__date-author">
+                <span class="date">June 6, 2019</span>
+                <span class="by">By</span>
+                <span class="author">Rickie Baroch</span>
+              </p>
+            </div>
+          </a>
+          <a href="#" class="post__item">
+            <img src="images/post-img3.png" alt="picture">
+            <div class="post__info">
+              <p class="post__rubric">Fashion</p>
+              <h1 class="post__title">
+                One of Saturn’s largest rings may be newer than anyone
+              </h1>
+              <p class="post__date-author">
+                <span class="date">June 6, 2019</span>
+                <span class="by">By</span>
+                <span class="author">Rickie Baroch</span>
+              </p>
+            </div>
+          </a>
+          <a href="#" class="post__item">
+            <img src="images/post-img4.png" alt="picture">
+            <div class="post__info">
+              <p class="post__rubric">Clothes</p>
+              <h1 class="post__title">
+                One of Saturn’s largest rings may be newer than anyone
+              </h1>
+              <p class="post__date-author">
+                <span class="date">June 6, 2019</span>
+                <span class="by">By</span>
+                <span class="author">Rickie Baroch</span>
+              </p>
+            </div>
+          </a>
+          <a href="#" class="post__item">
+            <img src="images/post-img5.png" alt="picture">
+            <div class="post__info">
+              <p class="post__rubric">Clothes</p>
+              <h1 class="post__title">
+                One of Saturn’s largest rings may be newer than anyone
+              </h1>
+              <p class="post__date-author">
+                <span class="date">June 6, 2019</span>
+                <span class="by">By</span>
+                <span class="author">Rickie Baroch</span>
+              </p>
+            </div>
+          </a>
+          <a href="#" class="post__item">
+            <img src="images/post-img6.png" alt="picture">
+            <div class="post__info">
+              <p class="post__rubric">Fashion</p>
+              <h1 class="post__title">
+                One of Saturn’s largest rings may be newer than anyone
+              </h1>
+              <p class="post__date-author">
+                <span class="date">June 6, 2019</span>
+                <span class="by">By</span>
+                <span class="author">Rickie Baroch</span>
+              </p>
+            </div>
+          </a>
         </div>
         <div class="sidebar"></div>
       </div>
