sidebar is complete(html, css)

--- a/index.html
+++ b/index.html
@@ -162,7 +162,39 @@
             </div>
           </a>
         </div>
-        <div class="sidebar"></div>
+        <div class="sidebar">
+          <div class="sidebar__toptitle">About the author</div>
+          <div class="sidebar__info info-block">
+            <img class="info-block__img" src="images/sidebar-img.png" alt="picture">
+            <div class="info-block__title">Kate Willems</div>
+            <div class="info-block__subtitle">Food & cooking bloger</div>
+            <div class="info-block__text">Hi, I'm Sonia. Cooking is the way I express my creative side to the world. Welcome to my Kitchen Corner on…</div>
+            <a href="#" class="info-block__link">Continue Reading</a>
+          </div>
+          <div class="sidebar__middletitle">Categories</div>
+          <div class="sidebar__categories categories">
+            <div class="categories__box">
+              <span class="categorie">Fashion</span>
+              <span class="number">(23)</span>
+            </div>
+            <div class="categories__box">
+              <span class="categorie">Style & clothes</span>
+              <span class="number">(7)</span>
+            </div>
+            <div class="categories__box">
+              <span class="categorie">Minimalism</span>
+              <span class="number">(16)</span>
+            </div>
+            <div class="categories__box">
+              <span class="categorie">Black & White</span>
+              <span class="number">(5)</span>
+            </div>
+            <div class="categories__box">
+              <span class="categorie">Modern clothes</span>
+              <span class="number">(12)</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
