pagination is completely done

--- a/index.html
+++ b/index.html
@@ -164,7 +164,17 @@
             </a>
           </div>
           <div class="post__pagination">
-
+            <nav>
+              <ul class="pagination">
+                <li class="pagination__item pagination-prev"><a class="pagination__link disable" href="#"> < older post </a></li>
+                <li class="pagination__item"><a class="pagination__link" href="#">1</a></li>
+                <li class="pagination__item"><a class="pagination__link" href="#">2</a></li>
+                <li class="pagination__item"><a class="pagination__link" href="#">3</a></li>
+                <li class="pagination__item"><a class="pagination__link" href="#">...</a></li>
+                <li class="pagination__item"><a class="pagination__link" href="#">8</a></li>
+                <li class="pagination__item pagination-next"><a class="pagination__link" href="#"> next post > </a></li>
+              </ul>
+            </nav>
           </div>
         </div>
         <div class="sidebar">
