--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <header class="header">
     <div class="container-big">
       <div class="header-top">
-        <a class="header-top__logo" href="#">Fashion</a>
+        <a class="header-top__logo" href="#">
+          <img src="images/logotype.png" alt="picture" class="header__img">
+        </a>
         <nav class="header-top__menu">
           <ul class="header-top__list">
             <li class="header-top__item"><a class="header-top__link header-top__link-active" href="#">Home</a></li>
@@ -213,6 +215,25 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__logo">
+          <img class="footer__img" src="images/logotype.png" alt="picture">
+        </div>
+        <nav>
+          <ul class="footer__menu">
+            <li class="footer__item">Home</li>
+            <li class="footer__item">Recipes</li>
+            <li class="footer__item">Article</li>
+            <li class="footer__item">Contact</li>
+            <li class="footer__item">Purchase</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/slick.min.js"></script>
