footer with footer-bottom is complete. Home-page for desktop version is done

--- a/index.html
+++ b/index.html
@@ -220,20 +220,30 @@
     <div class="container">
       <div class="footer__inner">
         <div class="footer__logo">
-          <img class="footer__img" src="images/logotype.png" alt="picture">
+          <a href="#">
+            <img class="footer__img" src="images/logotype.png" alt="picture">
+          </a>
         </div>
         <nav>
           <ul class="footer__menu">
-            <li class="footer__item">Home</li>
-            <li class="footer__item">Recipes</li>
-            <li class="footer__item">Article</li>
-            <li class="footer__item">Contact</li>
-            <li class="footer__item">Purchase</li>
+            <li class="footer__item"><a class="footer__link" href="#">Home</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Recipes</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Article</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Contact</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Purchase</a></li>
           </ul>
         </nav>
       </div>
     </div>
   </footer>
+
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="footer-bottom__inner">
+        <div class="footer-bottom__text">@2019 Logwork. All Right Reserved.</div>
+      </div>
+    </div>
+  </div>
 
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/slick.min.js"></script>
