--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
             <li class="header-top__item"><a class="header-top__link" href="#">Purchase</a></li>
           </ul>
         </nav>
-        <div class="burger-menu">
-<!--          <img src="images/menu-button.svg" alt="picture" class="menu-button">-->
-<!--          <img src="images/close-button.svg" alt="picture" class="close-button">-->
-        </div>
+        <div class="burger-menu"></div>
       </div>
     </div>
   </header>
